[tool.poetry]
name = "first-model"
version = "0.1.0"
description = ""
authors = ["naruponw <narupon.is.learning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
joblib = "^1.4.2"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
